# spokk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.json5  camera.cpp  camera.h  cds_mesh.h  cds_vulkan.h  cds_vulkan.hpp  compute.cpp  cookbook.glsl  cookbook.hlsl  cube_mesh.h  cubeswarm.cpp  double_ints.comp  fullscreen.vert  image_file.c  image_file.cpp  image_file.h  lights.cpp  lit_mesh.frag  lit_mesh.vert  pillar.frag  pillar.vert  pillars.cpp  platform.h  rigid_mesh.frag  rigid_mesh.vert  rigid_mesh_ps.hlsl  rigid_mesh_vs.hlsl  shadertoy.cpp  shadertoy.frag  skybox.frag  skybox.vert  spokkle.cpp  stb_vulkan.h  subpass_post.frag  testapp.cpp  (+44 more)
assets/: cube02.ktx  cube03.ktx  cube04.ktx  tex00.ktx  tex07.ktx  tex09.ktx  tex10.ktx
samples/assets/: assets.json5  cube01.ktx  llap.ktx  redf.ktx  sanfrancisco4-512.ktx  testcube.ktx  tex02.ktx  tex13.ktx  tex14.ktx
samples/benchmark/: benchmark.cpp  rigid_mesh.vert
samples/blending/: blending.cpp  dsb_mesh.frag  dsb_mesh.vert  opaque_mesh.frag  opaque_mesh.vert
samples/common/: camera.cpp  camera.h  cookbook.glsl  cookbook.hlsl  shader_compiler.cpp  shader_compiler.h
samples/compute/: compute.cpp  double_ints.comp
samples/cubeswarm/: cubeswarm.cpp  rigid_mesh.frag  rigid_mesh.vert  rigid_mesh_vs.hlsl
samples/eleven/: eleven.cpp  test.hlsl
samples/lights/: emissive.frag  emissive.vert  lights.cpp  lit_mesh.frag  lit_mesh.vert  skybox.frag  skybox.vert  skybox_ps.hlsl  skybox_vs.hlsl
samples/pillars/: pillar.frag  pillar.vert  pillars.cpp
samples/shadertoy/: .gitignore  fullscreen.vert  shadertoy.cpp  shadertoy.frag  shadertoyinfo.cpp  shadertoyinfo.h  update_shader_cache.py
samples/text/: text.cpp  text.frag  text.vert  textmesh.frag  textmesh.vert
samples/trails/: particle.frag  particle.vert  trail.frag  trail.vert  trails.cpp
samples/tv/: film.frag  fullscreen.vert  midi.cpp  midi.h  pillar.frag  pillar.vert  tv.cpp
src/spokk/: image_file.c  image_file.h  spokk.h  spokk_application.cpp  spokk_application.h  spokk_barrier.cpp  spokk_barrier.h  spokk_buffer.cpp  spokk_buffer.h  spokk_context.cpp  spokk_context.h  spokk_debug.h  spokk_device.cpp  spokk_device.h  spokk_filesystem.cpp  spokk_filesystem.h  spokk_image.cpp  spokk_image.h  spokk_imgui_impl_glfw.cpp  spokk_imgui_impl_glfw_vulkan.cpp  spokk_imgui_impl_glfw_vulkan.h  spokk_imgui_impl_vulkan.cpp  spokk_imgui_impl_vulkan.h  spokk_input.cpp  spokk_input.h  spokk_math.cpp  spokk_math.h  spokk_memory.cpp  spokk_memory.h  spokk_mesh.cpp  spokk_mesh.h  spokk_pipeline.cpp  spokk_pipeline.h  spokk_platform.c  spokk_platform.h  spokk_renderer.cpp  spokk_renderer.h  spokk_renderpass.cpp  spokk_renderpass.h  spokk_shader.cpp  (+10 more)
src/spokkle/: spokkle.cpp
trevor/: cube00.ktx  cube04.dds  cube05.ktx  noise.dds  testcube.dds  tex01.ktx  tex03.ktx  tex04.ktx  tex05.ktx  tex06.ktx  tex08.ktx  tex11.ktx  tex12.ktx  tex15.ktx  toropilo.astc  trevor-bc1.dds
